<resources>
    <string name="app_name">My Firt</string>
    <string name="txtTen">Ten</string>
    <string name="txtEmail">Email</string>
    <string name="btChap">Chap Nhan</string>
    <string name="btHuy">Huy</string>
    <string name="rdNam">Nam</string>
    <string name="rdNu">Nu</string>
    <string name="txtGioi">Gioi Tinh</string>
    <string name="textview">TextView</string>
    <string name="txtLan">Languages</string>
    <string-array name="lan_array">
        <item>Viet Nam</item>
        <item>Mỹ</item>
        <item>Trung Quốc</item>
        <item>Nhật Bản</item>
    </string-array>
</resources>